# TechMarket

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-ingestion.yml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_job_lifecycle_and_source_runs.py  0003_seniority_evidence.py
apps/api/src/: config.py  main.py
apps/api/src/application/: ports.py
apps/api/src/domain/: entities.py
apps/api/src/infrastructure/: database.py  models.py  repositories.py
apps/api/src/presentation/: routes.py  schemas.py
apps/web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/features/dashboard/: DashboardPage.tsx  ModalityChart.tsx  SeniorityChart.tsx  SummaryCards.tsx  TopTechnologiesChart.tsx
data-platform/connectors/: adzuna.py  arbeitnow.py  base.py  greenhouse.py  remotive.py  seed.py
data-platform/quality/: validators.py
data-platform/schemas/: raw_job.py
data-platform/scripts/: pipeline.py  rebuild_database.py  reclassify_seniority.py  run_pipeline.py
data-platform/transformations/: loader.py  normalization.py  storage.py
docs/: architecture.md  data-model.md  deployment.md  frontend-handoff.md  frontend-types.ts  ingestion-validation.md
infra/: docker-compose.prod.yml  docker-compose.yml
tests/: conftest.py  test_api.py  test_connectors.py  test_loader.py  test_normalization.py  test_pipeline.py
(+24 files in other folders)
