[project]
name = "techjobs-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.16.2",
  "fastapi==0.115.14",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.9",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.34.3",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "ruff==0.12.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "apps/api", "data-platform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

